// Vitest Snapshot v1

exports[`parseJsDoc > @param > extracts jsdoc description 1`] = `
{
  "description": null,
  "params": [
    {
      "description": "test",
      "name": "bar",
      "optional": false,
      "type": null,
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @param > extracts jsdoc empty description 1`] = `
{
  "description": null,
  "params": [
    {
      "description": null,
      "name": "bar",
      "optional": false,
      "type": {
        "name": "string",
      },
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @param > extracts jsdoc optional 1`] = `
{
  "description": null,
  "params": [
    {
      "description": null,
      "name": "bar",
      "optional": true,
      "type": {
        "name": "string",
      },
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @param > extracts jsdoc typed array 1`] = `
{
  "description": null,
  "params": [
    {
      "description": null,
      "name": "bar",
      "optional": false,
      "type": {
        "elements": [
          {
            "name": "string",
          },
          {
            "name": "number",
          },
        ],
        "name": "tuple",
      },
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @param > extracts jsdoc union type param 1`] = `
{
  "description": null,
  "params": [
    {
      "description": null,
      "name": "bar",
      "optional": false,
      "type": {
        "elements": [
          {
            "name": "string",
          },
          {
            "name": "Object",
          },
          {
            "elements": [
              {
                "name": "some",
              },
            ],
            "name": "Array",
          },
        ],
        "name": "union",
      },
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @returns > extracts description from jsdoc 1`] = `
{
  "description": null,
  "params": [],
  "returns": {
    "description": "The number",
    "type": null,
  },
}
`;

exports[`parseJsDoc > @returns > extracts jsdoc mixed types 1`] = `
{
  "description": null,
  "params": [],
  "returns": {
    "description": null,
    "type": {
      "name": "mixed",
    },
  },
}
`;

exports[`parseJsDoc > @returns > extracts jsdoc typed array 1`] = `
{
  "description": null,
  "params": [
    {
      "description": null,
      "name": "bar",
      "optional": false,
      "type": {
        "elements": [
          {
            "name": "string",
          },
          {
            "name": "number",
          },
        ],
        "name": "tuple",
      },
    },
  ],
  "returns": null,
}
`;

exports[`parseJsDoc > @returns > extracts jsdoc types 1`] = `
{
  "description": null,
  "params": [],
  "returns": {
    "description": null,
    "type": {
      "name": "string",
    },
  },
}
`;

exports[`parseJsDoc > @returns > works with @return 1`] = `
{
  "description": null,
  "params": [],
  "returns": {
    "description": "The number",
    "type": null,
  },
}
`;

exports[`parseJsDoc > description > extracts the method description in jsdoc 1`] = `
{
  "description": "Don't use this!",
  "params": [],
  "returns": null,
}
`;
